# ResumeBuilder

./: .gitignore  CLAUDE.md  Makefile  package.json  pnpm-lock.yaml
apps/api/: .env.example  README.md  app.db  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: __init__.py  auth.py  resumes.py
apps/api/app/core/: config.py  database.py  dependencies.py  security.py
apps/api/app/models/: resume.py  user.py
apps/api/app/schemas/: __init__.py  resume.py  resume_data.py  user.py
apps/api/app/services/: ai_service.py  resume_service.py  user_service.py
apps/api/tests/: conftest.py  test_auth.py  test_resumes.py
apps/api/uploads/extracted/: 1_1_extracted.json  2_2_extracted.json  2_4_extracted.json
apps/web/: package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/features/: page.tsx
apps/web/src/app/home/: layout.tsx  page.tsx
apps/web/src/app/jobs/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/product/: page.tsx
apps/web/src/app/reviews/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/app/templates/: page.tsx
apps/web/src/components/auth/: PasswordStrength.tsx
apps/web/src/components/dashboard/: AISuggestionsWidget.tsx  ATScoreCard.tsx  CreateResumeCard.tsx  DashboardSidebar.tsx  JobMatchesWidget.tsx  ResumeCard.tsx
apps/web/src/components/landing/: FeaturesSection.tsx  HeroSection.tsx  LandingFooter.tsx  (+4 more)
apps/web/src/lib/: api.ts  auth.ts  templates.ts
(+6 files in other folders)
